# feedzgerald

./: .gitignore  Dockerfile  README.md  pyproject.toml
feedzgerald/: app.py  config.py  feed.py
